# cpp17.samples

./: .ycm_extra_conf.py  CMakeLists.txt
aggregate initialization of classes with base classes/: CMakeLists.txt  main.cpp
attributes for namespaces and enumerators/: CMakeLists.txt  main.cpp
constant evaluation for all non-type template arguments/: CMakeLists.txt  main.cpp
constexpr if-statements/: CMakeLists.txt  main.cpp
constexpr lambda/: CMakeLists.txt  main.cpp
cpp17/: main.cpp
cpp17.xcodeproj/: CMakeLists.txt  project.pbxproj
direct-list-initialization of enums/: CMakeLists.txt  main.cpp
dynamic memory allocation for over-aligned data/: CMakeLists.txt  main.cpp
exception specifications part of the type system/: CMakeLists.txt  main.cpp
filesystem/: CMakeLists.txt  main.cpp
fold expressions/: CMakeLists.txt  main.cpp
fold expressions empty parameter packs/: CMakeLists.txt  main.cpp
generalizing the range-based for loop/: CMakeLists.txt  main.cpp
lambda capture of this by value/: CMakeLists.txt  main.cpp
misc/: CMakeLists.txt  main.cpp
nested namespace definition/: CMakeLists.txt  main.cpp
new attributes/: CMakeLists.txt  main.cpp
parallelized algorithms/: CMakeLists.txt  main.cpp
refining expression evaluation order for idiomatic cpp/: CMakeLists.txt  main.cpp
remove deprecated/: CMakeLists.txt  main.cpp
selection statements with initializer/: CMakeLists.txt  main.cpp
std/: CMakeLists.txt  main.cpp
std optional/: CMakeLists.txt  main.cpp
std string_view/: CMakeLists.txt  main.cpp
std variant/: CMakeLists.txt  main.cpp
(+7 files in other folders)
