cmake_minimum_required(VERSION 3.0)

project(cpp17)

add_subdirectory("aggregate initialization of classes with base classes")
add_subdirectory("attributes for namespaces and enumerators")
add_subdirectory("constant evaluation for all non-type template arguments")
add_subdirectory("constexpr if-statements")
add_subdirectory("direct-list-initialization of enums")
add_subdirectory("dynamic memory allocation for over-aligned data")
add_subdirectory("exception specifications part of the type system")
add_subdirectory("fold expressions")
add_subdirectory("fold expressions empty parameter packs")
add_subdirectory("generalizing the range-based for loop")
add_subdirectory("lambda capture of this by value")
add_subdirectory("misc")
add_subdirectory("nested namespace definition")
add_subdirectory("new attributes")
add_subdirectory("refining expression evaluation order for idiomatic cpp")
add_subdirectory("remove deprecated")
add_subdirectory("selection statements with initializer")
add_subdirectory("structured bindings")
add_subdirectory("u8 character literals")
add_subdirectory("filesystem")
add_subdirectory("std")
add_subdirectory("std variant")
